bug fix
fix user not showing up in email

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -448,6 +448,7 @@ h2 {
     .history-card-wide.mdl-card {
         margin: 0 .5em 1em;
         flex-grow: 1;
+        max-width: 500px;
         > .mdl-card__title {
             color: #fff;
             padding-top: 5em;
